tests/aster/x/go/bool_chain.out
# command-line-arguments
tests/aster/x/go/bool_chain.go:13:49: syntax error: unexpected literal 10 in argument list; possibly missing comma or )
tests/aster/x/go/bool_chain.go:14:48: syntax error: unexpected literal 10 in argument list; possibly missing comma or )
tests/aster/x/go/bool_chain.go:15:60: syntax error: unexpected literal 10 in argument list; possibly missing comma or )
