tests/aster/x/go/bool_chain.go
//go:build ignore
// Generated by Mochi v0.10.36 on 2025-07-22 18:26:24 GMT+7
package main

import (
    "fmt"
)
func boom() bool {
    fmt.Println()
    return 
}
func main() {
    fmt.Println(int((1 + 2) + (2 + 3)) + (3 + 4)10())
    fmt.Println(int((1 + 2) + (2 + 3)) + boom()10())
    fmt.Println(int(((1 + 2) + (2 + 3)) + (3 + 4)) + boom()10())
}
